--- a/Todo/Pages/TodoListComponent.razor
+++ b/Todo/Pages/TodoListComponent.razor
@@ -1,19 +1,16 @@
-﻿  @if (TodoItems != null)
+﻿  
+<h1 class="text-2xl">Welcome to our Todo List</h1>
+
+@if (TodoItems != null)
   {
-<ul class="flex w-full flex-wrap gap-4">
+<div class="flex w-full flex-wrap gap-4">
   
         @foreach (var todoItem in TodoItems.OrderBy(x => x.Status))
         {
             <TodoItemComponent TodoItem="@todoItem" OnChange="Save" OnDelete="RemoveFromTodoList"></TodoItemComponent>
         }
-        <li class="w-full">
-            <label>New todo item!</label>
-            <input class="block border-gray-600 w-full rounded shadow" type="text" @bind="@NewTodoItemName"/>
-            <label class="@(IsInputEmpty ? "" : "hidden") text-red-500">Input is required!</label>
-            <button disabled="@IsInputEmpty" class="rounded shadow p-4" @onclick="@AddTodoItemToList">Add</button>
-        </li>
-
-</ul>
+        <NewTodoItemComponent OnNewTodoItem="AddTodoItemToList"></NewTodoItemComponent>
+</div>
   }
   else
   {
