--- a/Todo/Shared/MainLayout.razor
+++ b/Todo/Shared/MainLayout.razor
@@ -1,9 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    @* <div class="sidebar"> *@
-    @*     <NavMenu /> *@
-    @* </div> *@
+        <NavMenu />
 
     <div class="main">
         <div class="content px-4">
