--- a/Todo/Pages/TodoListComponent.razor
+++ b/Todo/Pages/TodoListComponent.razor
@@ -1,12 +1,12 @@
-﻿@using System.IO
-@if (TodoItems != null)
+﻿@if (TodoItems != null)
 {
-    <div class="flex w-full flex-wrap gap-4">
-        <Dropzone Items="TodoItems">
-            <TodoItemComponent TodoItem="@context" OnChange="Save" OnDelete="RemoveFromTodoList"></TodoItemComponent>
-        </Dropzone>
-        <NewTodoItemComponent OnNewTodoItem="AddTodoItemToList"></NewTodoItemComponent>
-    </div>
+<div class="flex w-full flex-wrap">
+    <NewTodoItemComponent OnNewTodoItem="AddTodoItemToList"></NewTodoItemComponent>
+    <Dropzone Items="TodoItems">
+        <TodoItemComponent TodoItem="@context" OnChange="Save" OnDelete="RemoveFromTodoList"></TodoItemComponent>
+    </Dropzone>
+
+</div>
 }
 else
 {<div class="w-full h-screen flex justify-center flex-wrap content-center">
