--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -11,9 +11,12 @@
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="text-sm lg:flex-grow">
-            <a class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4">
+            <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="" Match="NavLinkMatch.All">
                 Todo
-            </a>
+            </NavLink>
+            <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="completed" Match="NavLinkMatch.Prefix">
+            Completed
+            </NavLink>
         </div>
     </div>
 </nav>
