--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -15,8 +15,11 @@
                 Todo
             </NavLink>
             <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="completed" Match="NavLinkMatch.Prefix">
-            Completed
+                Completed
             </NavLink>
         </div>
+    </div>
+    <div class="w-auto justify-self-end text-xl text-white font-semibold">
+        @UserName
     </div>
 </nav>
