--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<nav class="flex items-center justify-between flex-wrap bg-green-500 p-6">
     <div class="flex items-center flex-no-shrink text-white mr-6">
 
-        <img class="w-16" src="/images/ThomasLogo.png" />
+        <img class="transition duration-500 ease-in-out w-16 transform hover:-translate-y-1 hover:scale-150" src="/images/ThomasLogo.png" />
         <span class="font-semibold text-xl tracking-tight">Todo App</span>
     </div>
     <div class="block lg:hidden">
