--- a/Todo/Pages/NewTodoItemComponent.razor
+++ b/Todo/Pages/NewTodoItemComponent.razor
@@ -3,7 +3,7 @@
         <DataAnnotationsValidator />
 
         <div class="w-full h-16 flex">
-            <button type="submit" class="rounded-l h-full bg-green-500 px-4 shadow font-medium text-white">Add</button>
+            <button type="submit" class="hop-cursor rounded-l h-full bg-green-500 px-4 shadow font-medium text-white">Add</button>
 
             <InputText placeholder="New todo text" id="Text" class="w-full rounded-r h-full shadow font-bold pl-2" @bind-Value="TodoItem.Name"></InputText>
 
