End of the stream

--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -19,7 +19,8 @@
             </NavLink>
         </div>
     </div>
-    <div class="w-auto justify-self-end text-xl text-white font-semibold">
+    <a href=".auth/logout" class="w-auto justify-self-end text-xl text-white font-semibold">
+
         @UserName
-    </div>
+    </a>
 </nav>
