--- a/Todo/Pages/TodoItemComponent.razor
+++ b/Todo/Pages/TodoItemComponent.razor
@@ -19,8 +19,8 @@
     else
     {
         <label class="m-4 w-4/5 h-8 text-lg font-medium">@TodoItem.Name</label>
-        <button class="shadow rounded mr-4 h-auto px-4" @onclick="Edit">Edit</button>
-        <button class="shadow rounded h-auto px-4" @onclick="Delete">Delete</button>
+        <button class="transition duration-500 ease-in-out transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl shadow rounded mr-4 h-auto px-4 hover:bg-green-300" @onclick="Edit">Edit</button>
+        <button class="transition duration-500 ease-in-out transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl shadow rounded mr-4 h-auto px-4 hover:bg-green-300" @onclick="Delete">Delete</button>
 
     }
 </div>
