--- a/Todo/Pages/TodoListItems/TodoListItemsComponent.razor
+++ b/Todo/Pages/TodoListItems/TodoListItemsComponent.razor
@@ -12,7 +12,7 @@
 else
 {
     
-    <div class="w-full h-screen flex justify-center flex-wrap content-center">
-        <div class="loader ease-linear rounded-full border-8 border-t-8 border-gray-200 h-64 w-64"></div>
+    <div class="w-full h-full flex justify-center flex-wrap content-center">
+        <LoaderComponent/>
     </div>
 }
