--- a/Todo/Pages/Index.razor
+++ b/Todo/Pages/Index.razor
@@ -1,3 +1,3 @@
 ﻿@page "/"
 
-<TodoListComponent DisplayChecked="false"></TodoListComponent>
+<TodoListItemsComponent DisplayChecked="false"></TodoListItemsComponent>
