--- a/Todo/_Imports.razor
+++ b/Todo/_Imports.razor
@@ -10,3 +10,5 @@
 @using Todo.Shared
 @using Plk.Blazor.DragDrop
 @using Microsoft.AspNetCore.Components.Authorization
+@using Todo.Pages.TodoListItems
+@using Todo.Pages.TodoList
