--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -12,10 +12,19 @@
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="text-sm lg:flex-grow">
             <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="" Match="NavLinkMatch.All">
-                Todo
+                Home
             </NavLink>
-            <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="completed" Match="NavLinkMatch.Prefix">
-                Completed
+            @if (TodoLists != null)
+            {
+                @foreach (var list in TodoLists)
+                {
+                    <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="@("list/" + @list.Id)" Match="NavLinkMatch.Prefix">
+                        @list.Name
+                    </NavLink>
+                }
+            }
+            <NavLink class="block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" href="todolist/overview" Match="NavLinkMatch.Prefix">
+                Manage List
             </NavLink>
         </div>
     </div>
