--- a/Todo/Shared/NavMenu.razor
+++ b/Todo/Shared/NavMenu.razor
@@ -28,8 +28,13 @@
             </NavLink>
         </div>
     </div>
-    <a href=".auth/logout" class="w-auto justify-self-end text-xl text-white font-semibold">
-
-        @UserName
-    </a>
+    <div class="w-auto justify-self-end ">
+        <a href=".auth/logout" class="text-xl text-center w-full text-white font-semibold">
+            @UserName
+        </a>
+        <br/>
+        <a class="w-full text-center text-white font-semibold select-all">
+            @UserId
+        </a>
+    </div>
 </nav>
